# conan-usd

./: .gitattributes  .gitignore  README.md
21.02/: CMakeLists.txt  conandata.yml  conanfile.py
21.02/patches/: USD-21.02-tf-token-algorithm.patch  USD-21.02.patch
21.02/test_package/: CMakeLists.txt  conanfile.py  convert_first_geom_points.cpp  example.cpp
example_data/: example.usd
